# book-reader-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ACCEPTANCE.md  ANTI_LAZINESS.md  DESIGN.md  INSTALL.md  METHOD.md  README.zh-CN.md  RECONSTRUCTION_MODEL.md  RELEASE_NOTES_v0.1.md  ROADMAP.md  RUN_PROTOCOL.md  SKILL_ARCHITECTURE.md  WORKSPACE_MODEL.md
docs/audit/: PUBLISHING_PLAN.md  RELEASE_CHECKLIST_v0.1.md  V0_1_BETA_AUDIT.md
examples/: README.md  sample-fiction.md  sample-nonfiction.txt  sample-technical.md  sample.md
scripts/: install_skills.py
skills/book-intake/: SKILL.md
skills/book-intake/references/: intake-contract.md
skills/book-intake/scripts/: book_reader.py  build_workspace.py  extractors.py  language.py  normalize_text.py  paths.py  source_map.py  validate_workspace.py
skills/book-reader/: SKILL.md
skills/book-reader/references/: lens-selection.md  method-overview.md  run-protocol.md
skills/book-reconstruct/: SKILL.md
skills/book-reconstruct/references/: anti-laziness-obligations.md  continuation-planning.md  evidence-discipline.md  knowledge-organization.md  reconstruction-model.md
skills/book-reviewer/: SKILL.md
skills/book-reviewer/references/: anti-laziness-audit.md  inference-discipline-audit.md  reviewer-boundary.md
skills/book-reviewer/templates/: review-report.md  revision-plan.md
skills/book-revise/: SKILL.md
skills/book-revise/references/: revision-protocol.md
skills/book-revise/templates/: revision-log.md
tests/: README.md  test_helpers.py
(+36 files in other folders)
